# ab-test-significance-toolkit

./: .editorconfig  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  USAGE.md
docs/screenshots/: README.md
examples/: sample_ga4_export.csv
src/ab_test_toolkit/: __init__.py  bayesian.py  cli.py  frequentist.py  ga4_loader.py  report.py  revenue.py  sequential.py
tests/: test_bayesian.py  test_frequentist.py  test_sequential.py
